# kangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: kangle.yml
cmake/: FindPCRE.cmake
console/: README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: App.vue  main.ts  test.html
console/src/components/: ServerNode.vue  Whm.vue
console/src/router/: index.ts
console/src/views/: ConfigView.vue  ConnectPerIpView.vue  ConnectionView.vue  ExtendView.vue  FooterView.vue  InfoView.vue  ProcessView.vue  RebootView.vue  RequestView.vue  ResponseView.vue  VirtualHostView.vue
docs/: acl_mark.md  config.md  dso.md
etc/: config-default.xml
extworker/: KChildApiService.cpp  KChildApiService.h  KChildListen.cpp  KChildListen.h  KChildPipeStreamListen.h  KSocketStream.h  api_child.cpp  extworker.h  main.cpp
include/: HttpFiber.h  KAccess.h  KAccessDso.h  KAccessDsoSupport.h  KAccessParser.h  KAcl.h  KAcserver.h  KAcserverManager.h  KAjpFetchObject.h  KAjpMessage.h  KAntiRefresh.h  KAntiRefreshMark.h  KApacheVirtualHost.h  KApiDso.h  KApiEnv.h  KApiFastcgiFetchObject.h  KApiFetchObject.h  KApiPipeStream.h  KApiProcess.h  KApiRedirect.h  KApiService.h  KAsyncFetchObject.h  KAsyncFileApi.h  KAsyncMutex.h  KAtomLock.h  KAttackRequestManager.h  KAutoBuffer.h  KBaseVirtualHost.h  KBigObject.h  KBigObjectContext.h  KBigObjectManager.h  KBigObjectStream.h  KBlackListMark.h  KBodyWStream.h  KBrotli.h  KBuffer.h  KBufferFetchObject.h  KCache.h  KCacheFetchObject.h  KCacheStream.h  (+247 more)
module/access/: KAddHeaderMark.h  KAuthMark.h  KAuthUserAcl.h  KCacheControlMark.h  KCloudIpAcl.h  KContentLengthAcl.h  KDirAcl.h  KDstPortAcl.h  KFileAcl.h  KFileExeAcl.h  KFlagMark.h  KGSpeedLimitMark.h  KHeaderAcl.h  KHostAcl.h  KHttp10Mark.h  KHttpsProxyMark.h  KLoadAvgAcl.h  KMethodAcl.h  KMultiAcl.h  KMultinAcl.h  KObjAlwaysOnAcl.h  KPathAcl.h  KPathSignMark.h  KRefererAcl.h  KRegContentMark.h  KRegFileAcl.h  KRegPathAcl.h  KRequestHeaderAcl.h  KResponseFlagMark.h  KResponseHeaderAcl.h  KRewriteMark.h  KSSLSerialAcl.h  KSelfIpAcl.h  KSelfPortAcl.h  KSpeedLimitMark.h  KSrcAcl.h  KStubStatusMark.h  KTimeAcl.h  KTryFileAcl.h  KUrlAcl.h
module/anticc/: KAnticcAccess.cpp  KAnticcAccess.h  KSession.cpp  KSession.h  KSessionAccess.cpp  KSessionAccess.h  KSessionCtx.h  KSessionManager.cpp  KSessionManager.h  access.cpp  anticc.cpp  anticc.def  anticc.h  resource.h  stdafx.cpp
module/filter/: KInputFilter.cpp  KInputFilter.h  KMultiPartInputFilter.cpp  KMultiPartInputFilter.h  access.cpp  filter.cpp  filter.h  main.cpp  param.cpp  param_count.cpp  post_file.cpp
module/testdso/: access.cpp  async_upstream.cpp  filter.cpp  filter.h  main.cpp  push_gate.cpp  sendfile_log.cpp  sync_upstream.cpp  upstream.h
module/vhs_sqlite/: dllmain.cpp  vhs_sqlite.cpp  vhs_sqlite.def  vhs_sqlite.h
module/webdav/: CMakeLists.txt  KAttribute.cpp  KAttribute.h  KDavLock.cpp  KDavLock.h  KFSResource.cpp  KFSResource.h  KResource.cpp  KResource.h  KResourceMaker.h  KWebDavService.cpp  KWebDavService.h  KXmlDocument.cpp  KXmlDocument.h  webdav.cpp  webdav.def
module/whm/: KWhmService.cpp  KWhmService.h  WhmCallMap.cpp  WhmCallMap.h  WhmCommand.cpp  WhmCommand.h  WhmContext.cpp  WhmContext.h  WhmCore.cpp  WhmCore.h  WhmDso.cpp  WhmDso.h  WhmExtend.cpp  WhmExtend.h  WhmLog.cpp  WhmLog.h  WhmPackage.cpp  WhmPackage.h  WhmPackageManage.cpp  WhmPackageManage.h  WhmShell.cpp  WhmShell.h  WhmShellContext.h  WhmShellProcess.cpp  WhmShellProcess.h  WhmShellSession.cpp  WhmShellSession.h  WhmUrl.cpp  WhmUrl.h  dllmain.cpp  stdafx.cpp  stdafx.h  whm.cpp  whm.h
src/: EdcodeUtils.cpp  HttpAccess.h  HttpCore.cpp  HttpFiber.cpp  KAccess.cpp  KAccess.h  KAccessDso.cpp  KAccessDsoSupport.cpp  KAccessDsoSupport.h  KAccessParser.cpp  KAccessParser.h  KAcl.h  KAcserver.cpp  KAcserver.h  KAcserverManager.cpp  KAcserverManager.h  KAjpFetchObject.cpp  KAjpFetchObject.h  KAjpMessage.cpp  KAntiRefresh.cpp  KAnticcImgRewriteMark.h  KAnticcSession.cpp  KAnticcSession.h  KApacheVirtualHost.cpp  KApacheVirtualHost.h  KApiDso.cpp  KApiEnv.cpp  KApiEnv.h  KApiFastcgiFetchObject.cpp  KApiFetchObject.cpp  KApiFetchObject.h  KApiPipeStream.cpp  KApiPipeStream.h  KApiProcess.cpp  KApiRedirect.cpp  KApiService.h  KAsyncFetchObject.cpp  KAsyncFetchObject.h  KAsyncFileApi.cpp  KAsyncWorker.cpp  (+361 more)
test/: build.sh  test.sh
test/etc/: server.crt  server.key
test/test_child/: CMakeLists.txt  main.cpp
test/test_framework/: go.mod
test/test_framework/access_suite/: auth.go  filter.go  header.go  init.go  redirect.go
test/test_framework/base_suite/: 100_continue.go  apache.go  big_request_header.go  bigobj.go  bug.go  cache.go  chunk.go  config.go  config_server.go  directory.go  encoding.go  fastcgi.go  flush.go  gzip.go  head.go  if_range.go  init.go  obs_fold.go  options.go  pipeline.go  process.go  read_hup.go  server.go  sub_status.go  upstream_http_protocol.go  utils.go  vary.go  websocket.go
test/test_framework/benchmark/: benchmark.go
test/test_framework/cmd_suite/: cmd.go  init.go
test/test_framework/common/: assert.go  client.go  range.go  utils.go
test/test_framework/config/: config.go
test/test_framework/dso_suite/: broken_header.go  dso.go  init.go  sendfile.go
test/test_framework/framework/: main.go
test/test_framework/kangle/: main.go
test/test_framework/main/: main.go  suite.go
test/test_framework/server/: server.go
test/test_framework/suite/: process.go  suite.go
test/test_framework/vh_suite/: init.go  vh.go
test/test_framework/webdav_suite/: init.go  webdav.go
test/test_server/: go.mod  go.sum
test/test_server/access_suite/: auth.go  filter.go  header.go  init.go  redirect.go
test/test_server/base_suite/: 100_continue.go  apache.go  bigobj.go  cache.go  chunk.go  config.go  directory.go  encoding.go  extworker.go  fastcgi.go  gzip.go  head.go  if_range.go  init.go  obs_fold.go  options.go  pipeline.go  process.go  (+7 more)
test/www/: htaccess.txt
webadmin/: core.whm  lang.xml  lang_en.xml  lang_tw.xml  lang_zh.xml  main.css  obj.html
(+47 files in other folders)
